<resources>
    <string name="app_name">Expenses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Дата</string>
    <string name="description">Описание</string>
    <string name="cost">Сумма</string>
    <string name="save">Сохранить</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="Amount">Сумма</string>
    <string name="add_expenditure">Добавить расход</string>
</resources>